# egrssmatrices

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
egrssmatrices/: egrssmatrix.py  spline_kernel.py
examples/: smoothingspline.py
tests/: test_egrssmatrix.py
