[build-system]
requires = ["hatchling", "numpy"]
build-backend = "hatchling.build"

[project]
name = "egrssmatrices"
version = "0.0.1"
authors = [
  { name="Mikkel Paltorp", email="mikkel.paltorp@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mipals/egrssmatrices"